--- a/Clockrona/app/src/main/res/values/strings.xml
+++ b/Clockrona/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Clockrona</string>
     <string name="btnAE">후유증 종류</string>
+    <string name="myRegion">내 지역 확인</string>
+    <string name="btnMO">옵션</string>
 </resources>
